@@ -2,6 +2,7 @@
 
 	* Fix set unknowns
 	* Avoid recursion in expression() and answer()
+	* Changes in conversion unit category list - only one row expand at the same time, show units in subcategories if list otherwise empty, expand on click if units in subcategories not shown
 
 2017-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
